2015-01-19  Tassilo Horn  <tsdh@gnu.org>

	* tex.el (TeX-auto-store): Fix indentation in auto files.

2015-01-16  Arash Esbati  <esbati@gmx.de>

	* style/minted.el: Update copyright year.
	(LaTeX-minted-auto-cleanup): Fix the name of the new langcode
	environment.

2014-12-30  Arash Esbati  <esbati@gmx.de>

	* style/multirow.el ("multirow"): Fix a typo in the name of a
	variable.

	* Makefile.in (STYLESRC): Add new styles.

	* style/relsize.el: New file.

	* style/wrapfig.el: New file.

	* style/hyperref.el ("hyperref"): Add `Form' environment needed
	for PDF and HTML forms.
	(LaTeX-hyperref-forms-options): New variable for key-val options
	used in form related macros (`TextField', `CheckBox',
	`ChoiceMenu', `PushButton', `Submit', `Reset').

2014-12-22  Tassilo Horn  <tsdh@gnu.org>

	* doc/changes.texi: Document addition of LaTeX-command-section and
	forward/backward search enhancements with Evince.

	* latex.el (auto-mode-alist): Add latex-mode association for HeVeA
	files.

2014-12-21  Tassilo Horn  <tsdh@gnu.org>

	* tex.el (TeX-parse-macro): Enclose arg in
	LaTeX-default-verb-delimiter if macro is in
	LaTeX-verbatim-macros-with-delims and there's only one argument.
	(TeX-auto-store): Check if LaTeX-verbatim-environments,
	LaTeX-verbatim-macros-with-delims, and
	LaTeX-verbatim-macros-with-braces are bound before using them.

	* style/minted.el (LaTeX-minted-newminted-regexp)
	(LaTeX-minted-newmint-regexp, LaTeX-minted-newmintinline-regexp)
	(LaTeX-minted-newmintedfile-regexp, LaTeX-minted-auto-cleanup):
	Extend to recognize optional env/macro name.
	("minted"): Add \newminted, \newmint, \newmintinline, and
	\newmintedfile macros.

2014-12-20  Tassilo Horn  <tsdh@gnu.org>

	* tex.el (TeX-auto-store): Write LaTeX-verbatim-*-local variables
	to auto file to make them document-local.

	* style/minted.el (LaTeX-minted-auto-cleanup): Recognize macros
	generated by \newmint, \newmintinline, and \newmintedfile, too.
