@@ -441,11 +441,11 @@ the name of the sectioning command inserted with `\\[LaTeX-section]'."
   (let ((string (completing-read
 		 (concat "Level: (default " name ") ")
 		 LaTeX-section-list
-		 nil nil nil)))
-    ; Update name
+		 nil nil nil nil name)))
+    ;; Update name
     (if (not (zerop (length string)))
 	(setq name string))
-    ; Update level
+    ;; Update level
     (setq level (LaTeX-section-level name))))
 
 (defun LaTeX-section-title ()
